...
    <string name="user_documentation">User Documentation</string>
    <string name="click_to_web">Tap to visit https://docs.odk-x.org</string>
    <string name="visit_user_docs">Read the Open Data Kit user documentation at https://docs.odk-x.org</string>
    <string name="opendatakit_url">https://docs.odk-x.org</string>

    <string name="server_settings_summary">User identity, authentication and server configuration</string>
    <string name="server">Server</string>
    <string name="server_restrictions_apply">Server Settings (non-Admin restrictions apply)</string>
    <string name="server_url">Server URL</string>
    <string name="change_server_url">Server URL</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="url_error_whitespace">whitespace is not allowed in urls</string>

    <string name="restrict_server_settings_summary">Limit non-Admin ability to change Server Settings</string>
    <string name="restrict_server">Manage ability to change Server Settings</string>
    <string name="credential">Server Sign-on Credential</string>
    <string name="change_credential">Change Sign-on Credential</string>

    <string name="username_password">Username and/or Password</string>
    <string name="username">Username</string>
    <string name="change_username">ODK-X Username</string>
...

    <string name="testing_support">Non-Production (Test) Settings:</string>
    <string name="non_secure_authentication">Allow unsafe/unsecured Authentication</string>
    <string name="non_secure_summary">Authenticate over http: (testing support)</string>

    <string name="restrict_device_settings_summary">Limit non-Admin ability to change Device Settings</string>
    <string name="restrict_device">Manage ability to change Device Settings</string>

    <string name="device_settings_summary">Device-specific Configuration</string>
    <string name="configure_device_settings">Configure device settings</string>
    <string name="device">Device Settings</string>
    <string name="preferences">Preferences</string>
    <string name="device_restrictions_apply">Device Settings (non-Admin restrictions apply)</string>

    <string name="default_locale">Default Locale</string>
    <string name="change_default_locale">Change Default Locale</string>
    <string name="system_locale">Device Locale (%1$s)</string>
    <string name="font_size">Text Font Size</string>
    <string name="change_font_size">Text Font Size</string>

    <string name="show_splash">Show Splash Screen</string>
    <string name="show_splash_summary">Shows when application starts</string>
    <string name="splash_path">Selected Splash Image</string>
    <string name="default_splash_path">ODK-X Default</string>
    <string name="select_another_image">Select Another Image</string>
    <string name="use_odk_default">Use Default Image</string>
    <string name="change_splash_path">Change Image</string>
    <string name="admin_change_splash_settings">Change Splash Screen settings</string>
    <string name="splash_media_save_failed">Unable to copy selected splash screen image</string>

    <string name="tool_tables_settings">Tables-specific Settings</string>
    <string name="odkx_tables">ODK-X Tables</string>
    <string name="tool_tables_restrictions_apply">Tables-specific settings (non-Admin restrictions apply)</string>
    <string name="tool_tables_settings_summary">ODK-X Tables-specific settings</string>
    <string name="settings_for_odkx_tables">Settings for ODK-X Tables</string>
    <string name="custom_home_screen">Use custom home screen</string>
    <string name="admin_tool_tables_settings">Manage ability to change Tables-specific Settings</string>
    <string name="admin_tool_tables_settings_summary">Limit non-Admin ability to change Tables-specific Settings</string>
    <string name="change_custom_home_screen">Change use of custom home screen</string>

    <string name="clear_configuration_settings">Reset configuration</string>
    <string name="clear_settings">Clear Settings</string>
    <string name="exit_admin_mode">Exit admin mode</string>
    <string name="click_to_clear_settings">Click to clear settings</string>
    <string name="reset_configuration">Reset configuration</string>
    <string name="click_to_exit_admin_settings">Click to exit admin settings</string>

    <string name="reset_settings">Configuration Reset</string>
    <string name="confirm_reset_settings">Device-specific and
...
